vlib/v/parser/tests/invalid_using_mut.vv
fn main() {
	if mut true {
		println(true)
	}
}
